CUR 4150 - Issue 2: Missing space between on Title (Metadata) label and form manager breadcrumb on BS > CP

--- a/src/scripts/components/EditorOverlay.scss
+++ b/src/scripts/components/EditorOverlay.scss
@@ -55,7 +55,7 @@
     top: 0;
   }
   .editor-overlay-content {
-    padding-top: 0;
+    // padding-top: 0;
     padding-bottom: 0;
     overflow-x: hidden;
   }
